fix modify an element of array

--- a/Crud3-basicOperation.ipynb
+++ b/Crud3-basicOperation.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -87,23 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x21436a827c0>"
+       "3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#modifica del tag\n",
-    "db.articoli.update_one({\"titolo\":\"EU scientists demand bloc finalise UK’s membership of £80bn programme\"},{\"$set\":{\"tags.0\":\"EUL\"}})"
+    "a = list(db.articoli.find({\"titolo\":\"EU scientists demand bloc finalise UK’s membership of £80bn programme\"},{\"_id\":0,\"tags\":1}))\n",
+    "a = a[0][\"tags\"].index(\"Brexit\")\n",
+    "db.articoli.update_one({\"titolo\":\"EU scientists demand bloc finalise UK’s membership of £80bn programme\"},{\"$set\":{\"tags.{}\".format(a):\"EUL\"}})"
    ]
   },
   {
@@ -126,13 +135,6 @@
     "#eliminare di un tag\n",
     "db.articoli.update_one({\"titolo\":\"ho cambiato il titolo a Vladimir Putin\"},{\"$pull\":{\"tags\":\"GGG\"}})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
